url settings in json file

--- a/UsersWeb/UsersWeb.csproj
+++ b/UsersWeb/UsersWeb.csproj
@@ -105,11 +105,9 @@
     <Content Include="tsconfig.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <TypeScriptCompile Include="app\app-routing.module.ts" />
     <TypeScriptCompile Include="app\app.component.ts" />
+    <TypeScriptCompile Include="app\config.service.ts" />
     <TypeScriptCompile Include="app\app.home.component.ts" />
     <TypeScriptCompile Include="app\app.module.ts" />
     <TypeScriptCompile Include="app\app.errorHandler.ts" />
